<resources>
    <string name="app_name">Bottom_Navigation_Bar</string>
    <string name="camera">camera</string>
    <string name="cart">cart</string>
    <string name="store">store</string>
    <string name="favourite">favourite</string>
    <string name="account">account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
