<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Account"
        android:title="@string/account"
        android:icon="@drawable/ic_account_box_black_24dp"/>
    <item
        android:id="@+id/Favourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_favorite_black_24dp"/>
    <item
        android:id="@+id/Store"
        android:title="@string/store"
        android:icon="@drawable/ic_store_black_24dp"/>
    <item
        android:id="@+id/Cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"/>
    <item
        android:id="@+id/Camera"
        android:title="@string/camera"
        android:icon="@drawable/ic_camera_alt_black_24dp"/>

</menu>